--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 	<nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
 		<div class="container">
-			<a class="navbar-brand" href="#"><span id="zenith-nav">ZENITH</span><span id="creations-nav">CREATIONS</span></a>
+			<a class="navbar-brand" href="#"><img src="assets/images/zenith-logo-white.png" width="150" alt=""></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -42,10 +42,9 @@
 		</div>
 	</nav>
 
-	<img class="img-fluid" src="assets/images/pwc.png" alt="">
+	<img class="img-fluid" src="assets/images/PwC.png" alt="">
 	<div class="custom-container">
-		<p>We are a gathering of artists, storytellers, and technologists,</p>
-		<p>designing strategic visuals for businesses of all sizes.</p>
+		<p>We are a gathering of artists, storytellers, and technologists, designing strategic visuals for businesses of all sizes.</p>
 	</div>
 
 	<div class="container-fluid">
@@ -72,7 +71,7 @@
 		<div class="row">
 			<div class="col-md-6 img-thumbnail">
 				<img class="img-fluid" src="assets/images/museum-5.png" alt="">
-				<p class="work-offered">Website + Business Photography</p>
+				<p class="work-offered">Case Study</p>
 				<p class="company">The History Company</p>
 			</div>
 			<div class="col-md-6 img-thumbnail">
@@ -82,7 +81,7 @@
 			</div>
 			<div class="col-md-6 img-thumbnail">
 				<img class="img-fluid" src="assets/images/ramendictorian-front-page.png" alt="">
-				<p class="work-offered">Brand Identity + Web Design + Photography</p>
+				<p class="work-offered">Case Study</p>
 				<p class="company">Ramendictorian</p>
 			</div>
 			<div class="col-md-6 img-thumbnail">
@@ -106,7 +105,7 @@
 	</div>
 
 	<footer class="navbar navbar-expand-lg footer-custom">
-		<div class="footer-left">
+	<div class="footer-left">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item"><a href="" class="nav-link">Contact Us</a></li>
 				<li class="nav-item"><a href="" class="nav-link"><i class="fab fa-facebook-square"></i></a></li>
@@ -114,23 +113,24 @@
 				<li class="nav-item"><a href="" class="nav-link"><i class="fab fa-instagram"></i></a></li>
 				<li class="nav-item"><a href="" class="nav-link"><i class="fab fa-vimeo-v"></i></a></li>
 			</ul>
-			<p id="copyright">Copyright &copy; Zenith Creations All rights reserved</p>
 		</div>
-		<div id="logo">
-			<span id="zenith-foot">Zenith</span>
-			<span id="creations-foot">Creations</span>
+
+		<div class="mx-auto justify-content-between" id="logo">
+			<img src="assets/images/zenith-logo-grey.png" width="150" alt="">
 		</div>
+		
 		<div class="footer-right">
-			<ul class="navbar-nav mr-auto">
+			<ul class="navbar-nav mr-auto justify-content-end">
 				<li class="nav-item"><a href="" class="nav-link">Privacy Policy</a></li>
 				<li class="nav-item"><a href="" class="nav-link">Terms & Conditions</a></li>
 			</ul>
+			<p id="copyright">Copyright &copy; Zenith Creations All rights reserved</p>
 		</div>
 	</footer>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-	<script type="text/javascript" src="assets/scripts/script.js"></script>
+	<!-- <script type="text/javascript" src="assets/scripts/script.js"></script> -->
 </body>
 </html>
