--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 
 	<img class="img-fluid" src="assets/images/PwC.png" alt="">
 	<div class="custom-container">
-		<p>We are a gathering of artists, storytellers, and technologists, designing strategic visuals for businesses of all sizes.</p>
+		<p>We are a gathering of artists, storytellers, and technologists,</p>
+		<p>designing strategic visuals for businesses of all sizes.</p>
 	</div>
 
 	<div class="container-fluid">
@@ -107,7 +108,7 @@
 	<footer class="navbar navbar-expand-lg footer-custom">
 	<div class="footer-left">
 			<ul class="navbar-nav ml-auto">
-				<li class="nav-item"><a href="" class="nav-link">Contact Us</a></li>
+				<li class="nav-item"><a href="" class="nav-link ">Contact Us</a></li>
 				<li class="nav-item"><a href="" class="nav-link"><i class="fab fa-facebook-square"></i></a></li>
 				<li class="nav-item"><a href="" class="nav-link"><i class="fab fa-twitter"></i></a></li>
 				<li class="nav-item"><a href="" class="nav-link"><i class="fab fa-instagram"></i></a></li>
