--- a/portfolio.html
+++ b/portfolio.html
@@ -10,13 +10,14 @@
 	<link rel="stylesheet" href="assets/styles/header.css">
 	<link rel="stylesheet" href="assets/styles/footer.css">
 	<link rel="stylesheet" href="assets/styles/mediaqueries.css">
+	<link rel="stylesheet" href="assets/styles/style.css">
 	<link rel="stylesheet" href="assets/styles/portfolio.css">
 </head>
 <body>
 
 	<nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
 		<div class="container">
-			<a class="navbar-brand" href="#"><span id="zenith-nav">ZENITH</span><span id="creations-nav">CREATIONS</span></a>
+			<a class="navbar-brand" href="#"><img src="assets/images/zenith-logo-white.png" width="150" alt=""></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -43,20 +44,20 @@
 	</nav>
 
 	<div class="container">
-		<ul class="">
-			<li>All</li>
-			<li>Video/Photography</li>
-			<li>Website & Digital Platforms</li>
-			<li>Brand Strategy & Graphics</li>
+		<ul>
+			<li class="list-inline-item"><a href="" class="active">All</a></li>
+			<li class="list-inline-item"><a href="">Video/Photography</a></li>
+			<li class="list-inline-item"><a href="">Website & Digital Platforms</a></li>
+			<li class="list-inline-item"><a href="">Brand Strategy & Graphics</a></li>
 		</ul>
 	</div>
 
 
-	<div class="container">
+	<div class="container main">
 		<div class="row">
 			<div class="col-md-6 img-thumbnail">
 				<img class="img-fluid" src="assets/images/museum-5.png" alt="">
-				<p class="work-offered">Website + Business Photography</p>
+				<p class="work-offered">Case Study</p>
 				<p class="company">The History Company</p>
 			</div>
 			<div class="col-md-6 img-thumbnail">
@@ -66,7 +67,7 @@
 			</div>
 			<div class="col-md-6 img-thumbnail">
 				<img class="img-fluid" src="assets/images/ramendictorian-front-page.png" alt="">
-				<p class="work-offered">Brand Identity + Web Design + Photography</p>
+				<p class="work-offered">Case Study</p>
 				<p class="company">Ramendictorian</p>
 			</div>
 			<div class="col-md-6 img-thumbnail">
@@ -79,25 +80,26 @@
 
 
 	<footer class="navbar navbar-expand-lg footer-custom">
-		<div class="footer-left">
+	<div class="footer-left">
 			<ul class="navbar-nav ml-auto">
-				<li class="nav-item"><a href="" class="nav-link">Contact Us</a></li>
+				<li class="nav-item"><a href="" class="nav-link ">Contact Us</a></li>
 				<li class="nav-item"><a href="" class="nav-link"><i class="fab fa-facebook-square"></i></a></li>
 				<li class="nav-item"><a href="" class="nav-link"><i class="fab fa-twitter"></i></a></li>
 				<li class="nav-item"><a href="" class="nav-link"><i class="fab fa-instagram"></i></a></li>
 				<li class="nav-item"><a href="" class="nav-link"><i class="fab fa-vimeo-v"></i></a></li>
 			</ul>
-			<p id="copyright">Copyright &copy; Zenith Creations All rights reserved</p>
 		</div>
-		<div id="logo">
-			<span id="zenith-foot">Zenith</span>
-			<span id="creations-foot">Creations</span>
+
+		<div class="mx-auto justify-content-between" id="logo">
+			<img src="assets/images/zenith-logo-grey.png" width="150" alt="">
 		</div>
+		
 		<div class="footer-right">
-			<ul class="navbar-nav mr-auto">
+			<ul class="navbar-nav mr-auto justify-content-end">
 				<li class="nav-item"><a href="" class="nav-link">Privacy Policy</a></li>
 				<li class="nav-item"><a href="" class="nav-link">Terms & Conditions</a></li>
 			</ul>
+			<p id="copyright">Copyright &copy; Zenith Creations All rights reserved</p>
 		</div>
 	</footer>
 
