--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
 	<footer class="navbar navbar-expand-lg footer-custom">
 		<div class="footer-left">
 			<ul class="navbar-nav ml-auto">
-				<li class="nav-item"><a href="" class="nav-link">Contact Us</a></li>
+				<li class="nav-item"><a href="contact.html" class="nav-link">Contact Us</a></li>
 				<li class="nav-item"><a href="" class="nav-link"><i class="fab fa-facebook-square"></i></a></li>
 				<li class="nav-item"><a href="" class="nav-link"><i class="fab fa-twitter"></i></a></li>
 				<li class="nav-item"><a href="" class="nav-link"><i class="fab fa-instagram"></i></a></li>
