--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 	<div class="container-fluid">
 		<h2>Capabilities</h2>
 		<div class="row">
-			<div id="video" class="col-md-4 col-sm-12">
+			<a href="videophotography.html" id="video" class="col-md-4 col-sm-12">
 				<h4>Video/Photography</h4>
 				<p class="invisible">The best results come through engaging videos and images. Whether you need an explainer video, commercial, product photography, or anything else in need of creating, we've got you covered.</p>
-			</div>
+			</a>
 			<div id="website" class="col-md-4 col-sm-12">
 				<h4>Website & Digital Platforms</h4>
 				<p class="invisible"></p>
