First explore button goes to video/photography

--- a/capabilities.html
+++ b/capabilities.html
@@ -80,7 +80,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12">
-						<a href="/" class="btn btn-primary">Explore</a>
+						<a href="videophotography.html" class="btn btn-primary">Explore</a>
 					</div>
 				</div>
 			</div>
