--- a/videophotography.html
+++ b/videophotography.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="assets/styles/footer.css">
 	<link rel="stylesheet" href="assets/styles/mediaqueries.css">
 	<link rel="stylesheet" href="assets/styles/style.css">
+	<link rel="stylesheet" href="assets/styles/video.css">
 </head>
 <body>
 
@@ -23,7 +24,7 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-						<a class="nav-link" href="#">Home</a>
+						<a class="nav-link" href="index.html">Home</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="portfolio.html">Portfolio</a>
@@ -44,14 +45,142 @@
 
 	<h2>Video/Photography</h2>
 	<div class="img-thumbnail">
-		<img src="assets/images/business-photography-01.png" width="800" alt="">
+		<!-- <img src="assets/images/business-photography-01.png" width="800" alt=""> -->
 		<p class="work-offered">Business Photography</p>
 		<p class="company">The History Company</p>
 	</div>
 
 	<div class="container-fluid">
-		<h3>Experiencing Through Visuals</h3>
-		<p>Research has proven without a doubt how videos and images possess higher success rates by a landslide</p>
+		<div class="container">
+			<h3>Experiencing Through Visuals</h3>
+			<p>Research has proven without a doubt how videos and images possess higher success rates by a landslide when compared to plain text. Genuiine connections with people are created when you present stunning visuals that capture the audience's attention and reflects the heart of the business at the same time.</p>
+		</div>
+		
+		<hr>
+
+		<div class="container">
+			<h3>List of services we can help with</h3>
+			<div class="row">
+				<div class="col-md-4">
+					<p>-Explainer videos</p>
+					<div class="row">
+						<div class="col-md-12">
+							<p>-Commercials</p>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+							<p>-Animated videos</p>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+							<p>-Visual effects (VFX)</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-4">
+					<p>-Concept design</p>
+					<div class="row">
+						<div class="col-md-12">
+							<p>-2D animation</p>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+							<p>-3D animation</p>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+							<p>-Motion graphics</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-4">
+					<p>-Product photography</p>
+					<div class="row">
+						<div class="col-md-12">
+							<p>-Buisness photography</p>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+							<p>-Photo retouching</p>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+							<p>-Photo manipulation</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- END CONTAINER-FLUID -->
+
+	<div class="container custom-container">
+		<h3>The Process</h3>
+		<p>Every project is unique, but they all follow a structure to insure we create something great together.</p>
+		<p>Here's a basic outline descriping how we work and what you can expect from us.</p>
+		<div class="process">
+			<div class="row">
+				<div class="col-md-4 order-md-1">
+					<h4>Strategy</h4>
+					<p>The idea is the start of every project. In this phase we will discuss and collaborate with you to solidify the visions and goals. From there our team will start strategic research and form a plan of action.</p>
+				</div>
+				<div class="col-md-4 order-md-2">
+					<div class="block-left"></div>
+					<hr>
+				</div>
+				<div class="col-md-4 order-md-3">
+					<img class="img-fluid img-right" src="assets/images/lightbulb.png" alt="">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4 order-md-3">
+					<h4>Pre-production</h4>
+					<p>The phase is the set-up phase for everything that's yet to come. For videos, here is where we structure and solidify things such as scripts and storyboards. For photography projects, this could be where we secure locations or equipment and supplies.</p>
+				</div>
+				<div class="col-md-4 order-md-2">
+					<hr>
+					<div class="block-right"></div>
+				</div>
+				<div class="col-md-4 order-md-1">
+					<img class="img-fluid img-left" src="assets/images/preproduction.png" alt="">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4 order-md-1">
+					<h4>Production</h4>
+					<p>Filming, photography, animation and VFX all happen here. From rough draft, to edits, to polish, we make sure our partners are updated on a timely schedule to ensure everything is the way they envisioned.</p>
+				</div>
+				<div class="col-md-4 order-md-2">
+					<div class="block-left"></div>
+					<hr>
+				</div>
+				<div class="col-md-4 order-md-3">
+					<img class="img-fluid img-right" src="assets/images/production.png" alt="">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4 order-md-3">
+					<h4>Release</h4>
+					<p>Once you are happy with the product, we'll wrap it up and send it your way!</p>
+				</div>
+				<div class="col-md-4 order-md-2">
+					<hr>
+					<div class="block-right"></div>
+				</div>
+				<div class="col-md-4 order-md-1">
+					<img class="img-fluid img-left" src="assets/images/release.png" alt="">
+				</div>
+				
+			</div>
+		</div>
 	</div>
 	
 
