Add links to capabilities

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 				<h4>Video/Photography</h4>
 				<p class="invisible">The best results come through engaging videos and images. Whether you need an explainer video, commercial, product photography, or anything else in need of creating, we've got you covered.</p>
 			</a>
-			<div id="website" class="col-md-4 col-sm-12">
+			<a href="website.html" id="website" class="col-md-4 col-sm-12">
 				<h4>Website & Digital Platforms</h4>
 				<p class="invisible"></p>
-			</div>
+			</a>
 			<div id="brand-strategy" class="col-md-4 col-sm-12">
 				<h4>Brand Stategy & Graphics</h4>
 				<p class="invisible"></p>
