--- a/website.html
+++ b/website.html
@@ -118,7 +118,7 @@
 					<hr>
 				</div>
 				<div class="col-md-4 order-md-3">
-					<img class="img-fluid img-right" src="assets/images/discover.png" alt="">
+					<img class="img-fluid img-right" src="assets/images/discover-square.png" alt="">
 				</div>
 			</div>
 			<div class="row">
@@ -131,7 +131,7 @@
 					<div class="block-right"></div>
 				</div>
 				<div class="col-md-4 order-md-1">
-					<img class="img-fluid img-left" src="assets/images/design.png" alt="">
+					<img class="img-fluid img-left" src="assets/images/design-square.png" alt="">
 				</div>
 			</div>
 			<div class="row">
@@ -144,7 +144,7 @@
 					<hr>
 				</div>
 				<div class="col-md-4 order-md-3">
-					<img class="img-fluid img-right" src="assets/images/development.png" alt="">
+					<img class="img-fluid img-right" src="assets/images/development-square.png" alt="">
 				</div>
 			</div>
 			<div class="row">
@@ -157,7 +157,7 @@
 					<div class="block-right"></div>
 				</div>
 				<div class="col-md-4 order-md-1">
-					<img class="img-fluid img-left" src="assets/images/launch.png" alt="">
+					<img class="img-fluid img-left" src="assets/images/launch-square.png" alt="">
 				</div>
 				
 			</div>
