Change image locations

--- a/videophotography.html
+++ b/videophotography.html
@@ -11,13 +11,13 @@
 	<link rel="stylesheet" href="assets/styles/footer.css">
 	<link rel="stylesheet" href="assets/styles/mediaqueries.css">
 	<link rel="stylesheet" href="assets/styles/style.css">
-	<link rel="stylesheet" href="assets/styles/video.css">
+	<link rel="stylesheet" href="assets/styles/services.css">
 </head>
 <body>
 
 	<nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
 		<div class="container">
-			<a class="navbar-brand" href="#"><img src="assets/images/zenith-logo-white.png" width="150" alt=""></a>
+			<a class="navbar-brand" href="#"><img src="assets/images/logo/zenith-logo-white.png" width="150" alt=""></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -137,7 +137,7 @@
 					<hr>
 				</div>
 				<div class="col-md-4 order-md-3">
-					<img class="img-fluid img-right" src="assets/images/lightbulb.png" alt="">
+					<img class="img-fluid img-right" src="assets/images/video-photography/lightbulb-square.png" alt="">
 				</div>
 			</div>
 			<div class="row">
@@ -150,7 +150,7 @@
 					<div class="block-right"></div>
 				</div>
 				<div class="col-md-4 order-md-1">
-					<img class="img-fluid img-left" src="assets/images/preproduction.png" alt="">
+					<img class="img-fluid img-left" src="assets/images/video-photography/preproduction-square.png" alt="">
 				</div>
 			</div>
 			<div class="row">
@@ -163,7 +163,7 @@
 					<hr>
 				</div>
 				<div class="col-md-4 order-md-3">
-					<img class="img-fluid img-right" src="assets/images/production.png" alt="">
+					<img class="img-fluid img-right" src="assets/images/video-photography/production-square.png" alt="">
 				</div>
 			</div>
 			<div class="row">
@@ -176,7 +176,7 @@
 					<div class="block-right"></div>
 				</div>
 				<div class="col-md-4 order-md-1">
-					<img class="img-fluid img-left" src="assets/images/release.png" alt="">
+					<img class="img-fluid img-left" src="assets/images/video-photography/release-square.png" alt="">
 				</div>
 				
 			</div>
@@ -196,7 +196,7 @@
 		</div>
 
 		<div class="mx-auto justify-content-between" id="logo">
-			<img src="assets/images/zenith-logo-grey.png" width="150" alt="">
+			<img src="assets/images/logo/zenith-logo-grey.png" width="150" alt="">
 		</div>
 		
 		<div class="footer-right">
