--- a/capabilities.html
+++ b/capabilities.html
@@ -17,7 +17,7 @@
 
 	<nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
 		<div class="container">
-			<a class="navbar-brand" href="#"><img src="assets/images/zenith-logo-white.png" width="150" alt=""></a>
+			<a class="navbar-brand" href="#"><img src="assets/images/logo/zenith-logo-white.png" width="150" alt=""></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -118,7 +118,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12">
-						<a href="/" class="btn btn-primary">Explore</a>
+						<a href="website.html" class="btn btn-primary">Explore</a>
 					</div>
 				</div>
 			</div>
@@ -156,7 +156,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12">
-						<a href="/" class="btn btn-primary">Explore</a>
+						<a href="brandstrategy.html" class="btn btn-primary">Explore</a>
 					</div>
 				</div>
 			</div>
@@ -179,7 +179,7 @@
 		</div>
 
 		<div class="mx-auto justify-content-between" id="logo">
-			<img src="assets/images/zenith-logo-grey.png" width="150" alt="">
+			<img src="assets/images/logo/zenith-logo-grey.png" width="150" alt="">
 		</div>
 		
 		<div class="footer-right">
