--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 	<nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
 		<div class="container">
-			<a class="navbar-brand" href="#"><img src="assets/images/zenith-logo-white.png" width="150" alt=""></a>
+			<a class="navbar-brand" href="#"><img src="assets/images/logo/zenith-logo-white.png" width="150" alt=""></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -59,10 +59,10 @@
 				<h4>Website & Digital Platforms</h4>
 				<p class="invisible"></p>
 			</a>
-			<div id="brand-strategy" class="col-md-4 col-sm-12">
+			<a href="brandstrategy.html" id="brand-strategy" class="col-md-4 col-sm-12">
 				<h4>Brand Stategy & Graphics</h4>
 				<p class="invisible"></p>
-			</div>
+			</a>
 		</div>
 	</div>
 	
@@ -117,7 +117,7 @@
 		</div>
 
 		<div class="mx-auto justify-content-between" id="logo">
-			<img src="assets/images/zenith-logo-grey.png" width="150" alt="">
+			<img src="assets/images/logo/zenith-logo-grey.png" width="150" alt="">
 		</div>
 		
 		<div class="footer-right">
