Add links to case studies

--- a/index.html
+++ b/index.html
@@ -70,21 +70,21 @@
 	<div class="container">
 		<h2>View Our Work</h2>
 		<div class="row">
-			<div class="col-md-6 img-thumbnail">
+			<a href="casestudy-thehistorycompany.html" class="col-md-6 img-thumbnail">
 				<img class="img-fluid" src="assets/images/museum-5.png" alt="">
 				<p class="work-offered">Case Study</p>
 				<p class="company">The History Company</p>
-			</div>
+			</a>
 			<div class="col-md-6 img-thumbnail">
 				<img class="img-fluid" src="assets/images/pwc-thumb.png" alt="">
 				<p class="work-offered">3D Animation</p>
 				<p class="company">PwC</p>
 			</div>
-			<div class="col-md-6 img-thumbnail">
+			<a href="casestudy-ramendictorian.html" class="col-md-6 img-thumbnail">
 				<img class="img-fluid" src="assets/images/ramendictorian-front-page.png" alt="">
 				<p class="work-offered">Case Study</p>
 				<p class="company">Ramendictorian</p>
-			</div>
+			</a>
 			<div class="col-md-6 img-thumbnail">
 				<img class="img-fluid" src="assets/images/logo-business-card.png" alt="">
 				<p class="work-offered">Logo Design</p>
