Add business class

--- a/casestudy-ramendictorian.html
+++ b/casestudy-ramendictorian.html
@@ -24,10 +24,10 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-						<a class="nav-link active" href="index.html">Home</a>
+						<a class="nav-link" href="index.html">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="portfolio.html">Portfolio</a>
+						<a class="nav-link active" href="portfolio.html">Portfolio</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="capabilities.html">Capabilities</a>
@@ -52,8 +52,8 @@
 		<div class="container">
 			<div class="row header">
 				<div class="col-md-6">
-					<p>Ramendictorian</p>
-					<p class="gray">The Ultimate Care Package</p>
+					<p class="business">Ramendictorian</p>
+					<p class="gray business">The Ultimate Care Package</p>
 				</div>
 				<div class="col-md-6">
 					<p>A brand new start up with a clear purpose and goal. We helped Ramendictorian establish a solid website, logo, and marketing materials to help it stand out from the crowd, and leave a positive impression with its audience.</p>
