--- a/videophotography.html
+++ b/videophotography.html
@@ -185,24 +185,25 @@
 	
 
 	<footer class="navbar navbar-expand-lg footer-custom">
-		<div class="footer-left">
-			<ul class="navbar-nav ml-auto">
-				<li class="nav-item"><a href="contact.html" class="nav-link ">Contact Us</a></li>
-				<li class="nav-item"><a href="" class="nav-link"><i class="fab fa-facebook-square"></i></a></li>
-				<li class="nav-item"><a href="" class="nav-link"><i class="fab fa-twitter"></i></a></li>
-				<li class="nav-item"><a href="" class="nav-link"><i class="fab fa-instagram"></i></a></li>
-				<li class="nav-item"><a href="" class="nav-link"><i class="fab fa-vimeo-v"></i></a></li>
-			</ul>
-		</div>
-
-		<div class="mx-auto justify-content-between" id="logo">
+		
+		<div class="mx-auto justify-content-between order-md-2" id="logo">
 			<img src="assets/images/logo/zenith-logo-grey.png" width="150" alt="">
 		</div>
+
+		<div class="footer-left order-md-1">
+			<ul class="footer-social ml-auto">
+				<li class="footer-hide"><a href="contact.html" class="">Contact Us</a></li>
+				<li class=""><a href="" class=""><i class="fab fa-facebook-square"></i></a></li>
+				<li class=""><a href="" class=""><i class="fab fa-twitter"></i></a></li>
+				<li class=""><a href="" class=""><i class="fab fa-instagram"></i></a></li>
+				<li class=""><a href="" class=""><i class="fab fa-vimeo-v"></i></a></li>
+			</ul>
+		</div>
 		
-		<div class="footer-right">
-			<ul class="navbar-nav mr-auto justify-content-end">
-				<li class="nav-item"><a href="" class="nav-link">Privacy Policy</a></li>
-				<li class="nav-item"><a href="" class="nav-link">Terms & Conditions</a></li>
+		<div class="footer-right order-md-3">
+			<ul class="footer-legal mr-auto justify-content-end">
+				<li class="footer-hide"><a href="" class="">Privacy Policy</a></li>
+				<li class="footer-hide"><a href="" class="">Terms & Conditions</a></li>
 			</ul>
 			<p id="copyright">Copyright &copy; Zenith Creations All rights reserved</p>
 		</div>
