--- a/footer.html
+++ b/footer.html
@@ -1,26 +1,27 @@
-<footer class="navbar navbar-expand-lg footer-custom">
-	<div class="footer-left">
-			<ul class="navbar-nav ml-auto">
-				<li class="nav-item"><a href="contact.html" class="nav-link ">Contact Us</a></li>
-				<li class="nav-item"><a href="" class="nav-link"><i class="fab fa-facebook-square"></i></a></li>
-				<li class="nav-item"><a href="" class="nav-link"><i class="fab fa-twitter"></i></a></li>
-				<li class="nav-item"><a href="" class="nav-link"><i class="fab fa-instagram"></i></a></li>
-				<li class="nav-item"><a href="" class="nav-link"><i class="fab fa-vimeo-v"></i></a></li>
-			</ul>
-		</div>
+<footer class="row footer-custom">
+	<div class="col-md-4 order-md-2">
+		<img src="assets/images/logo/zenith-logo-grey.png" width="150" alt="">
+	</div>
 
-		<div class="mx-auto justify-content-between" id="logo">
-			<img src="assets/images/logo/zenith-logo-grey.png" width="150" alt="">
-		</div>
-		
-		<div class="footer-right">
-			<ul class="navbar-nav mr-auto justify-content-end">
-				<li class="nav-item"><a href="" class="nav-link">Privacy Policy</a></li>
-				<li class="nav-item"><a href="" class="nav-link">Terms & Conditions</a></li>
-			</ul>
-			<p id="copyright">Copyright &copy; Zenith Creations All rights reserved</p>
-		</div>
-	</footer>
+	<div class="col-md-4 order-md-1">
+		<ul class="footer-social ml-auto">
+			<li class="footer-hide"><a href="contact.html" class="">Contact Us</a></li>
+			<li class=""><a href="" class=""><i class="fab fa-facebook-square"></i></a></li>
+			<li class=""><a href="" class=""><i class="fab fa-twitter"></i></a></li>
+			<li class=""><a href="" class=""><i class="fab fa-instagram"></i></a></li>
+			<li class=""><a href="" class=""><i class="fab fa-vimeo-v"></i></a></li>
+		</ul>
+	</div>
+
+	<div class="col-md-4 order-md-3">
+		<ul class="footer-legal mr-auto justify-content-end">
+			<li class="footer-hide"><a href="" class="">Privacy Policy</a></li>
+			<li class="footer-hide"><a href="" class="">Terms & Conditions</a></li>
+		</ul>
+		<p id="copyright">Copyright &copy; Zenith Creations All rights reserved</p>
+	</div>
+
+</footer>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
