Add images, fix columns and padding

--- a/capabilities.html
+++ b/capabilities.html
@@ -47,10 +47,10 @@
 		<h2>Capabilities</h2>
 		<div class="row">
 			<div class="col-md-4">
-				<img class="img-fluid" src="assets/images/pwc-thumb.png">
+				<img class="img-fluid" src="assets/images/capabilities/video-photography.png">
 				<div class="row">
 					<div class="col-md-12 gray">
-						<p>The most engaging results come through engaging videos and images. Whether you need an explainer video, commercial, product photography, or anything else in need of producing, we got you covered.</p>
+						<p>The most engaging results come through engaging videos and images. Whether you need an explainer video, commercial, product photography, or anything else, we got you covered.</p>
 					</div>
 				</div>
 				<div class="row">
@@ -85,7 +85,7 @@
 				</div>
 			</div>
 			<div class="col-md-4">
-				<img class="img-fluid" src="assets/images/pwc-thumb.png">
+				<img class="img-fluid" src="assets/images/capabilities/website.png">
 				<div class="row">
 					<div class="col-md-12" id="col-pad">
 						<p>Powerful websites create powerful impressions. We back our creativity in all our designs with solid marketing strategies that relfect your passions and connect with your audience.</p>
@@ -123,7 +123,7 @@
 				</div>
 			</div>
 			<div class="col-md-4">
-				<img class="img-fluid" src="assets/images/pwc-thumb.png">
+				<img class="img-fluid" src="assets/images/capabilities/brand-strategy.png">
 				<div class="row">
 					<div class="col-md-12 gray">
 						<p>Your business needs a story that connects, a design that's memorable. Whether you're looking for a design makeover, starting from scratch, or simply need a logo or business card design, we can help.</p>
