Add mobile images

--- a/brandstrategy.html
+++ b/brandstrategy.html
@@ -61,42 +61,29 @@
 		<div class="container">
 			<h3>List of services we can help with</h3>
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-xs-6 col-md-4">
 					<p>-Graphic design</p>
-					<div class="row">
-						<div class="col-md-12">
-							<p>-Naming & identity</p>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-12">
-							<p>-Brand design & theme</p>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-12">
-							<p>-Logo design</p>
-						</div>
-					</div>
 				</div>
-
-				<div class="col-md-4">
+				<div class="col-xs-6 col-md-4">
+					<p>-Naming & identity</p>
+				</div>
+				<div class="col-xs-6 col-md-4">
+					<p>-Brand design & theme</p>
+				</div>
+				<div class="col-xs-6 col-md-4">
+					<p>-Logo design</p>
+				</div>
+				<div class="col-xs-6 col-md-4">
 					<p>-Web & mobile</p>
-					<div class="row">
-						<div class="col-md-12">
-							<p>-Business card design</p>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-12">
-							<p>-Ecommerce design</p>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-12">
-							<p>-Social media</p>
-						</div>
-					</div>
+				</div>
+				<div class="col-xs-6 col-md-4">
+					<p>-Business card design</p>
+				</div>
+				<div class="col-xs-6 col-md-4">
+					<p>-Ecommerce design</p>
+				</div>
+				<div class="col-xs-6 col-md-4">
+					<p>-Social media</p>
 				</div>
 			</div>
 		</div>
@@ -118,7 +105,8 @@
 					<hr>
 				</div>
 				<div class="col-md-4 order-md-3">
-					<img class="img-fluid img-right" src="assets/images/brand-strategy/research-square.png" alt="">
+					<img class="img-fluid img-right img-full" src="assets/images/brand-strategy/research-square.png" alt="">
+					<img class="img-fluid img-right img-mobile" src="assets/images/brand-strategy/research-mobile.jpg" alt="">
 				</div>
 			</div>
 			<div class="row">
@@ -131,7 +119,8 @@
 					<div class="block-right"></div>
 				</div>
 				<div class="col-md-4 order-md-1">
-					<img class="img-fluid img-left" src="assets/images/brand-strategy/brainstorm-square.png" alt="">
+					<img class="img-fluid img-left img-full" src="assets/images/brand-strategy/brainstorm-square.png" alt="">
+					<img class="img-fluid img-left img-mobile" src="assets/images/brand-strategy/brainstorm-mobile.jpg" alt="">
 				</div>
 			</div>
 			<div class="row">
@@ -144,7 +133,8 @@
 					<hr>
 				</div>
 				<div class="col-md-4 order-md-3">
-					<img class="img-fluid img-right" src="assets/images/brand-strategy/production-square.png" alt="">
+					<img class="img-fluid img-right img-full" src="assets/images/brand-strategy/production-square.png" alt="">
+					<img class="img-fluid img-right img-mobile" src="assets/images/brand-strategy/production-mobile.jpg" alt="">
 				</div>
 			</div>
 			<div class="row">
@@ -157,9 +147,9 @@
 					<div class="block-right"></div>
 				</div>
 				<div class="col-md-4 order-md-1">
-					<img class="img-fluid img-left" src="assets/images/brand-strategy/styleguide-square.png" alt="">
+					<img class="img-fluid img-left img-full" src="assets/images/brand-strategy/styleguide-square.png" alt="">
+					<img class="img-fluid img-left img-mobile" src="assets/images/brand-strategy/styleguide-mobile.jpg" alt="">
 				</div>
-				
 			</div>
 		</div>
 	</div>
