--- a/videophotography.html
+++ b/videophotography.html
@@ -55,67 +55,47 @@
 			<h3>Experiencing Through Visuals</h3>
 			<p>Research has proven without a doubt how videos and images possess higher success rates by a landslide when compared to plain text. Genuiine connections with people are created when you present stunning visuals that capture the audience's attention and reflects the heart of the business at the same time.</p>
 		</div>
-		
+
 		<hr>
 
 		<div class="container">
 			<h3>List of services we can help with</h3>
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-xs-6 col-md-4">
 					<p>-Explainer videos</p>
-					<div class="row">
-						<div class="col-md-12">
-							<p>-Commercials</p>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-12">
-							<p>-Animated videos</p>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-12">
-							<p>-Visual effects (VFX)</p>
-						</div>
-					</div>
 				</div>
-
-				<div class="col-md-4">
+				<div class="col-xs-6 col-md-4">
 					<p>-Concept design</p>
-					<div class="row">
-						<div class="col-md-12">
-							<p>-2D animation</p>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-12">
-							<p>-3D animation</p>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-12">
-							<p>-Motion graphics</p>
-						</div>
-					</div>
 				</div>
-
-				<div class="col-md-4">
+				<div class="col-xs-6 col-md-4">
 					<p>-Product photography</p>
-					<div class="row">
-						<div class="col-md-12">
-							<p>-Buisness photography</p>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-12">
-							<p>-Photo retouching</p>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-12">
-							<p>-Photo manipulation</p>
-						</div>
-					</div>
+				</div>
+				<div class="col-xs-6 col-md-4">
+					<p>-Commercials</p>
+				</div>
+				<div class="col-xs-6 col-md-4">
+					<p>-2D animation</p>
+				</div>
+				<div class="col-xs-6 col-md-4">
+					<p>-Business photography</p>
+				</div>
+				<div class="col-xs-6 col-md-4">
+					<p>-Animated videos</p>
+				</div>
+				<div class="col-xs-6 col-md-4">
+					<p>-3D animation</p>
+				</div>
+				<div class="col-xs-6 col-md-4">
+					<p>-Photo retouching</p>
+				</div>
+				<div class="col-xs-6 col-md-4">
+					<p>-Visual effects (VFX)</p>
+				</div>
+				<div class="col-xs-6 col-md-4">
+					<p>-Motion graphics</p>
+				</div>
+				<div class="col-xs-6 col-md-4">
+					<p>-Photo manipulation</p>
 				</div>
 			</div>
 		</div>
@@ -137,7 +117,8 @@
 					<hr>
 				</div>
 				<div class="col-md-4 order-md-3">
-					<img class="img-fluid img-right" src="assets/images/video-photography/lightbulb-square.png" alt="">
+					<img class="img-fluid img-right img-full" src="assets/images/video-photography/lightbulb-square.png" alt="">
+					<img class="img-fluid img-right img-mobile" src="assets/images/video-photography/lightbulb-mobile.png" alt="">
 				</div>
 			</div>
 			<div class="row">
@@ -150,7 +131,8 @@
 					<div class="block-right"></div>
 				</div>
 				<div class="col-md-4 order-md-1">
-					<img class="img-fluid img-left" src="assets/images/video-photography/preproduction-square.png" alt="">
+					<img class="img-fluid img-left img-full" src="assets/images/video-photography/preproduction-square.png" alt="">
+					<img class="img-fluid img-left img-mobile" src="assets/images/video-photography/preproduction-mobile.png" alt="">
 				</div>
 			</div>
 			<div class="row">
@@ -163,7 +145,8 @@
 					<hr>
 				</div>
 				<div class="col-md-4 order-md-3">
-					<img class="img-fluid img-right" src="assets/images/video-photography/production-square.png" alt="">
+					<img class="img-fluid img-right img-full" src="assets/images/video-photography/production-square.png" alt="">
+					<img class="img-fluid img-right img-mobile" src="assets/images/video-photography/production-mobile.png" alt="">
 				</div>
 			</div>
 			<div class="row">
@@ -176,7 +159,8 @@
 					<div class="block-right"></div>
 				</div>
 				<div class="col-md-4 order-md-1">
-					<img class="img-fluid img-left" src="assets/images/video-photography/release-square.png" alt="">
+					<img class="img-fluid img-left img-full" src="assets/images/video-photography/release-square.png" alt="">
+					<img class="img-fluid img-left img-mobile" src="assets/images/video-photography/release-mobile.png" alt="">
 				</div>
 				
 			</div>
