--- a/website.html
+++ b/website.html
@@ -61,42 +61,29 @@
 		<div class="container">
 			<h3>List of services we can help with</h3>
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-xs-6 col-md-4">
 					<p>-Web design</p>
-					<div class="row">
-						<div class="col-md-12">
-							<p>-Web development</p>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-12">
-							<p>-Social media management</p>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-12">
-							<p>-Mobile/Responsive design</p>
-						</div>
-					</div>
 				</div>
-
-				<div class="col-md-4">
+				<div class="col-xs-6 col-md-4">
+					<p>-Web development</p>
+				</div>
+				<div class="col-xs-6 col-md-4">
+					<p>-Social media management</p>
+				</div>
+				<div class="col-xs-6 col-md-4">
+					<p>-Mobile/Responsive design</p>
+				</div>
+				<div class="col-xs-6 col-md-4">
 					<p>-Web management</p>
-					<div class="row">
-						<div class="col-md-12">
-							<p>-UI/UX design</p>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-12">
-							<p>-Consumer research</p>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-12">
-							<p>-Industry research</p>
-						</div>
-					</div>
+				</div>
+				<div class="col-xs-6 col-md-4">
+					<p>-UI/UX design</p>
+				</div>
+				<div class="col-xs-6 col-md-4">
+					<p>-Consumer research</p>
+				</div>
+				<div class="col-xs-6 col-md-4">
+					<p>-Industry research</p>
 				</div>
 			</div>
 		</div>
@@ -118,7 +105,8 @@
 					<hr>
 				</div>
 				<div class="col-md-4 order-md-3">
-					<img class="img-fluid img-right" src="assets/images/website/discover-square.png" alt="">
+					<img class="img-fluid img-right img-full" src="assets/images/website/discover-square.png" alt="">
+					<img class="img-fluid img-right img-mobile" src="assets/images/website/discover-mobile.png" alt="">
 				</div>
 			</div>
 			<div class="row">
@@ -131,7 +119,8 @@
 					<div class="block-right"></div>
 				</div>
 				<div class="col-md-4 order-md-1">
-					<img class="img-fluid img-left" src="assets/images/website/design-square.png" alt="">
+					<img class="img-fluid img-left img-full" src="assets/images/website/design-square.png" alt="">
+					<img class="img-fluid img-left img-mobile" src="assets/images/website/design-mobile.png" alt="">
 				</div>
 			</div>
 			<div class="row">
@@ -144,7 +133,8 @@
 					<hr>
 				</div>
 				<div class="col-md-4 order-md-3">
-					<img class="img-fluid img-right" src="assets/images/website/development-square.png" alt="">
+					<img class="img-fluid img-right img-full" src="assets/images/website/development-square.png" alt="">
+					<img class="img-fluid img-right img-mobile" src="assets/images/website/development-mobile.png" alt="">
 				</div>
 			</div>
 			<div class="row">
@@ -157,7 +147,8 @@
 					<div class="block-right"></div>
 				</div>
 				<div class="col-md-4 order-md-1">
-					<img class="img-fluid img-left" src="assets/images/website/launch-square.png" alt="">
+					<img class="img-fluid img-left img-full" src="assets/images/website/launch-square.png" alt="">
+					<img class="img-fluid img-left img-mobile" src="assets/images/website/launch-mobile.png" alt="">
 				</div>
 				
 			</div>
