--- a/casestudy-ramendictorian.html
+++ b/casestudy-ramendictorian.html
@@ -76,17 +76,17 @@
 					<h3>Logo design</h3>
 					<p>Setting to work to discover a logo design that not only reflects the brand's name, but also includes symbols of the brand's purpose. We implemented two of the most prominent items that represent Ramendictorian: ramen and the valedictorian status. We added bronze and yellow to uncover the emotions of energy and success, and the result was a bold logo that was easily recognizable across the web.</p>
 				</div>
-				<div class="col-md-3">
+				<div class="col-md-3 col-xs-6">
 					<img class="img-fluid" src="assets/images/case-study-ramendictorian/logo-01.png" alt="">
 				</div>
-				<div class="col-md-3">
+				<div class="col-md-3 col-xs-6">
 					<img class="img-fluid" src="assets/images/case-study-ramendictorian/logo-02.png" alt="">
 				</div>
 			</div>
 			<!-- END LOGO DESIGN -->
 			<div class="row">
 				<div class="col-md-6">
-					<img class="img-fluid" src="assets/images/case-study-ramendictorian/website-01.png" alt="">
+					<img class="img-fluid website-full" src="assets/images/case-study-ramendictorian/website-01.png" alt="">
 				</div>
 				<div class="col-md-6">
 					<h3>Website</h3>
@@ -95,7 +95,7 @@
 			</div>
 			<!-- END WEBSITE -->
 			<div class="row">
-				<div>
+				<div class="website">
 					<img class="img-fluid" src="assets/images/case-study-ramendictorian/website-02.png" alt="">
 				</div>
 			</div>
@@ -106,7 +106,7 @@
 					<p>The brand prides itself in the service of providing a variety of custom ramen recipes in their care packages. With each recipe adjust from scratch, they needed original photos to showcase the perfection of the results. We were not only able to deliver attention grabbing food photography that reflected their brand, but also try out some very delicious rame!</p>
 				</div>
 				<div class="col-md-6">
-					<img class="img-fluid" src="assets/images/case-study-ramendictorian/photography.png" alt="">
+					<img class="img-fluid photography-img" src="assets/images/case-study-ramendictorian/photography.png" alt="">
 				</div>
 			</div>
 			<!-- END PHOTOGRAPHY -->
@@ -122,7 +122,7 @@
 				</div>
 			</div>
 			<!-- END FIRST ROW OF IMAGES -->
-			<div class="row">
+			<div class="row row-2">
 				<div class="col-md-4">
 					<img class="img-fluid img-thumbnail" src="assets/images/case-study-ramendictorian/ramen-recipe-04.png" alt="">
 				</div>
@@ -135,7 +135,7 @@
 			</div>
 			<!-- END SECOND ROW OF IMAGES -->
 			<div class="center">
-				<a href="https://www.ramendictorian.com" class="btn btn-primary">Learn more of Ramendictorian</a>
+				<a href="https://www.ramendictorian.com" class="btn btn-primary">Ramendictorian</a>
 			</div>
 		</div>
 	</div>
