--- a/casestudy-thehistorycompany.html
+++ b/casestudy-thehistorycompany.html
@@ -46,7 +46,7 @@
 	<div class="container-custom">
 		<div class="cover-photo">
 			<h1>Web Design + Photography</h1>
-			<img class="cover-logo" src="assets/images/case-study-thehistorycompany/logo.png" width="800" alt="">
+			<img class="cover-logo img-fluid" src="assets/images/case-study-thehistorycompany/logo.png" alt="">
 			<h2>An updated website alongside beautifully executed photography to reflect a historically enrighing shop and museum</h2>
 		</div>
 		<div class="container">
@@ -106,7 +106,7 @@
 				</div>
 			</div>
 			<!-- END FIRST ROW OF IMAGES -->
-			<div class="row">
+			<div class="row row-2">
 				<div class="col-md-6">
 					<img class="img-fluid img-thumbnail" src="assets/images/case-study-thehistorycompany/photography-03.png" alt="">
 				</div>
@@ -116,7 +116,7 @@
 			</div>
 			<!-- END SECOND ROW OF IMAGES -->
 			<div class="center">
-				<a href="https://www.thehistorycompany.net" class="btn btn-primary">Learn more of The History Company</a>
+				<a href="https://www.thehistorycompany.net" class="btn btn-primary">The History Company</a>
 			</div>
 		</div>
 	</div>
