--- a/casestudy-ramendictorian.html
+++ b/casestudy-ramendictorian.html
@@ -29,8 +29,13 @@
 					<li class="nav-item">
 						<a class="nav-link active" href="portfolio.html">Portfolio</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="capabilities.html">Capabilities</a>
+					<li class="nav-item dropdown">
+						<a class="nav-link" id="navbarDropdown" role="navigation" data-toggle="dropdown" href="capabilities.html">Capabilities</a>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="videophotography.html">Video/Photography</a></li>
+							<li><a class="dropdown-item" href="website.html">Website</a></li>
+							<li><a class="dropdown-item" href="brandstrategy.html">Brand Strategy & Graphics</a></li>
+						</ul>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="contact.html">Contact</a>
@@ -169,6 +174,6 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-	<!-- <script type="text/javascript" src="assets/scripts/script.js"></script> -->
+	<script type="text/javascript" src="assets/scripts/script.js"></script>
 </body>
 </html>
