--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 		</div>
 	</nav>
 
-	<div class="container">
+	<div class="container contact-container">
 		<h2>Contact</h2>
 		<div class="row">
 			<div class="col-md-6">
