--- a/videophotography.html
+++ b/videophotography.html
@@ -49,11 +49,39 @@
 	</nav>
 
 	<h2>Video/Photography</h2>
-	<div class="img-thumbnail">
-		<!-- <img src="assets/images/business-photography-01.png" width="800" alt=""> -->
-		<p class="work-offered">Business Photography</p>
-		<p class="company">The History Company</p>
+	<div id="carouselSlides" class="carousel slide container" data-ride="carousel">
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<img class="d-block w-100" src="assets/images/video-photography/slide-01.png" width="800" alt="">
+				<div class="caption d-none d-md-block">
+					<p class="work-offered">Business Photography</p>
+					<p class="company">The History Company</p>
+				</div>
+			</div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="assets/images/video-photography/slide-02.png" width="800" alt="">
+				<div class="caption d-none d-md-block">
+					<p class="work-offered">Business Photography</p>
+					<p class="company">The History Company</p>
+				</div>
+			</div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="assets/images/video-photography/slide-03.png" width="800" alt="">
+				<div class="caption d-none d-md-block">
+					<p class="work-offered">Business Photography</p>
+					<p class="company">The History Company</p>
+				</div>
+			</div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="assets/images/video-photography/slide-04.png" width="800" alt="">
+				<div class="caption d-none d-md-block">
+					<p class="work-offered">Business Photography</p>
+					<p class="company">PwC</p>
+				</div>
+			</div>
+		</div>
 	</div>
+	
 
 	<div class="container-fluid">
 		<div class="container">
@@ -197,6 +225,8 @@
 			<p id="copyright">Copyright &copy; Zenith Creations All rights reserved</p>
 		</div>
 	</footer>
+
+
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
