--- a/website.html
+++ b/website.html
@@ -49,10 +49,23 @@
 	</nav>
 
 	<h2>Website & Digital Platforms</h2>
-	<div class="img-thumbnail">
-		<!-- <img src="assets/images/business-photography-01.png" width="800" alt=""> -->
-		<p class="work-offered">Website</p>
-		<p class="company">The History Company</p>
+	<div id="carouselSlides" class="carousel slide container" data-ride="carousel">
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<img class="d-block w-100" src="assets/images/website/slide-01.png" width="800" alt="">
+				<div class="caption d-none d-md-block">
+					<p class="work-offered">Website</p>
+					<p class="company">Ramendictorian</p>
+				</div>
+			</div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="assets/images/website/slide-02.png" width="800" alt="">
+				<div class="caption d-none d-md-block">
+					<p class="work-offered">Website</p>
+					<p class="company">The History Company</p>
+				</div>
+			</div>
+		</div>
 	</div>
 	
 	<div class="container-fluid">
