--- a/index.html
+++ b/index.html
@@ -46,6 +46,22 @@
 			</div>
 		</div>
 	</nav>
+	
+	<div id="carouselSlides" class="carousel slide" data-ride="carousel">
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<img class="d-block w-100" src="assets/images/slide-01.png" width="800" alt="">
+			</div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="assets/images/slide-02.png" width="800" alt="">
+			</div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="assets/images/slide-03.png" width="800" alt="">
+			</div>
+		</div>
+	</div>
+
+
 
 	<img class="img-fluid" src="assets/images/PwC.png" alt="">
 	<div class="custom-container">
