--- a/index.html
+++ b/index.html
@@ -61,9 +61,6 @@
 		</div>
 	</div>
 
-
-
-	<img class="img-fluid" src="assets/images/PwC.png" alt="">
 	<div class="custom-container">
 		<p>We are a gathering of artists, storytellers, and technologists,</p>
 		<p>designing strategic visuals for businesses of all sizes.</p>
@@ -74,7 +71,7 @@
 		<div class="row">
 			<a href="videophotography.html" id="video" class="col-md-4 col-sm-12">
 				<h4>Video/Photography</h4>
-				<p class="invisible">The best results come through engaging videos and images. Whether you need an explainer video, commercial, product photography, or anything else in need of creating, we've got you covered.</p>
+				<p class="">The best results come through engaging videos and images. Whether you need an explainer video, commercial, product photography, or anything else in need of creating, we've got you covered.</p>
 			</a>
 			<a href="website.html" id="website" class="col-md-4 col-sm-12">
 				<h4>Website & Digital Platforms</h4>
