--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Zenith Creations</title>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+	<link rel="stylesheet" href="assets/styles/lightbox.css">
 	<link rel="stylesheet" href="assets/styles/toggles.css">
 	<link rel="stylesheet" href="assets/styles/header.css">
 	<link rel="stylesheet" href="assets/styles/footer.css">
@@ -93,21 +94,21 @@
 				<p class="work-offered">Case Study</p>
 				<p class="company">The History Company</p>
 			</a>
-			<div class="col-md-6 img-thumbnail">
+			<a href="assets/images/slide-01.png" class="col-md-6 img-thumbnail" data-lightbox="image-1" data-title="3D animation">
 				<img class="img-fluid" src="assets/images/pwc-thumb.png" alt="">
 				<p class="work-offered">3D Animation</p>
 				<p class="company">PwC</p>
-			</div>
+			</a>
 			<a href="casestudy-ramendictorian.html" class="col-md-6 img-thumbnail">
 				<img class="img-fluid" src="assets/images/ramendictorian-front-page.png" alt="">
 				<p class="work-offered">Case Study</p>
 				<p class="company">Ramendictorian</p>
 			</a>
-			<div class="col-md-6 img-thumbnail">
+			<a href="assets/images/logo-business-card.png" class="col-md-6 img-thumbnail" data-lightbox="image-2" data-title="Logo design">
 				<img class="img-fluid" src="assets/images/logo-business-card.png" alt="">
 				<p class="work-offered">Logo Design</p>
 				<p class="company">Guardian Hog Ad Agency</p>
-			</div>
+			</a>
 		</div>
 		<div class="center">
 			<a href="portfolio.html" class="btn btn-primary">View more work</a>
@@ -148,9 +149,10 @@
 		</div>
 	</footer>
 
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="assets/scripts/lightbox.min.js"></script>
 	<script type="text/javascript" src="assets/scripts/script.js"></script>
 </body>
 </html>
