Fix dropdown padding

--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
 	</nav>
 
 	<div class="container">
-		<ul>
+		<ul class="portfolio-nav">
 			<li class="list-inline-item"><a href="" class="active">All</a></li>
 			<li class="list-inline-item"><a href="">Video/Photography</a></li>
 			<li class="list-inline-item"><a href="">Website & Digital Platforms</a></li>
