--- a/about.html
+++ b/about.html
@@ -67,11 +67,11 @@
 
 	<footer class="navbar navbar-expand-lg footer-custom">
 		
-		<div class="mx-auto justify-content-between order-md-2" id="logo">
+		<div class="mx-auto justify-content-between order-lg-2" id="logo">
 			<img src="assets/images/logo/zenith-logo-grey.png" width="150" alt="">
 		</div>
 
-		<div class="footer-left order-md-1">
+		<div class="footer-left order-lg-1">
 			<ul class="footer-social ml-auto">
 				<li class="footer-hide"><a href="contact.html" class="">Contact Us</a></li>
 				<li class=""><a href="" class=""><i class="fab fa-facebook-square"></i></a></li>
@@ -81,7 +81,7 @@
 			</ul>
 		</div>
 		
-		<div class="footer-right order-md-3">
+		<div class="footer-right order-lg-3">
 			<ul class="footer-legal mr-auto justify-content-end">
 				<li class="footer-hide"><a href="" class="">Privacy Policy</a></li>
 				<li class="footer-hide"><a href="" class="">Terms & Conditions</a></li>
